--- a/Project Brandon/Project Brandon/Project Brandon.vcxproj
+++ b/Project Brandon/Project Brandon/Project Brandon.vcxproj
@@ -115,6 +115,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="NodeData.h" />
+    <ClInclude Include="RandomString.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="TreeDriver.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
