--- a/Project Brandon/Project Brandon/Project Brandon.vcxproj
+++ b/Project Brandon/Project Brandon/Project Brandon.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClInclude Include="NodeData.h" />
     <ClInclude Include="RandomString.h" />
+    <ClInclude Include="tree.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TreeDriver.cpp" />
