--- a/Project Brandon/Project Brandon/Project Brandon.vcxproj.filters
+++ b/Project Brandon/Project Brandon/Project Brandon.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="RandomString.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TreeDriver.cpp">
