--- a/Project Samuel/Project Samuel/Project Samuel.vcxproj.filters
+++ b/Project Samuel/Project Samuel/Project Samuel.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="RandomString.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
